// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTimePicker should render defalut node whne value is undefined or value length is zero 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center full-width-element"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <span
        class="ant-typography ant-typography-secondary"
      >
        common.maintenanceTimePicker.placeholder
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          common.add
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`MaintenanceTimePicker should render time when value is not empty 1`] = `
<div>
  <div
    class="ant-space ant-space-horizontal ant-space-align-center full-width-element"
  >
    <div
      class="ant-space-item"
      style="margin-right: 8px;"
    >
      <span
        class="ant-tag"
      >
        23
        :
        00
         -
        23
        :
        59
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tag"
      >
        00
        :
        00
         -
        02
        :
        30
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
      <span
        class="ant-tag"
      >
        03
        :
        00
         -
        04
        :
        30
        <span
          aria-label="close"
          class="anticon anticon-close ant-tag-close-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          common.add
        </span>
      </button>
    </div>
  </div>
</div>
`;
